adding app assets

--- a/index.html
+++ b/index.html
@@ -1,14 +1,80 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Quiz Exercise</title>
-        <meta name="In this tutorial, we'll be piecing together a static web app to set the stage for putting the skillz you've gained from codecademy to the test!" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        
-    </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>F*CK MARRY KILL</title>
+
+  <!-- Responsive viewport tag, tells small screens that it's responsive -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Normalize.css, a cross-browser reset file -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css" rel="stylesheet">
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|VT323" rel="stylesheet">
+
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="lib/css/grid.css" />
+  <link rel="stylesheet" href="lib/css/main.css" />
+</head>
+<body>
+    <header>
+      <div class="row">
+        <div class="col-3">
+          <div class="correct top hide-it">
+          	<h3>We agree on:</h3>
+          	<hr>
+          	<div class="tally-correct">
+          		<span class="js-tally-correct">0</span>
+          	</div>
+          </div>
+        </div>
+        <div class="col-12 fmk">
+          <h1 class="game">F*CK MARRY KILL</h1>
+          <hr class="title-underline">
+          <h3 class="title">Life is Full of Tough Decisions</h3>
+        </div>
+        <div class="col-3">
+          <div class="correct bottom hide-it">
+          	<h3>We agree on:</h3>
+          	<hr>
+          	<div class="tally-correct">
+          		<span class="js-tally-correct">0</span>
+          	</div>
+          </div>
+        </div>
+        <div class="col-3 float">
+          <div class="incorrect hide-it">
+          	<h3>We disagree on:</h3>
+          	<hr>
+          	<div class="tally-incorrect">
+          		<span class="js-tally-incorrect">0</span>
+          	</div>
+          </div>
+        </div>
+      </div>
+      <hr class="line hide-it"/>
+    </header>
+
+    <main role="main">
+      <div class="answer-wrapper">
+
+      </div>
+      <div class="game-board">
+	      <div class="row line-up">
+
+	      </div>  	
+	      <div class="row button">
+	        <div class="col-12">
+	          <input type="button" value="LET'S PLAY" id="play" class="play-button">
+	        </div>
+	      </div> 
+      </div>     
+    </main>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
+<script src="lib/js/index.js"></script>
+</body>
 </html>
