adding css and updating readme

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat|VT323" rel="stylesheet">
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="lib/css/grid.css" />
-  <link rel="stylesheet" href="lib/css/main.css" />
+  <link rel="stylesheet" href="" />
+  <link rel="stylesheet" href="" />
 </head>
 <body>
     <header>
@@ -75,6 +75,6 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
-<script src="lib/js/index.js"></script>
+<script src=""></script>
 </body>
 </html>
